--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,12 @@ html{
       margin: 0 auto;
       background-color: #eeeeee;
       height: auto;
+
   }
+
+  ::-webkit-scrollbar {
+    display: none; 
+}
 
   .hidden {
     opacity: 0;
@@ -26,8 +31,12 @@ html{
   a:link{
     text-decoration: none!important;
     -webkit-tap-highlight-color: transparent;
+    text-decoration: none;    
+  }
 
-    
+  a{
+    text-decoration: none;
+
   }
 
   @font-face {
@@ -78,6 +87,31 @@ html{
   .parent-mobile{
     display: none;
   }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
   
   .top-nav{
     display: flex;
@@ -198,18 +232,19 @@ html{
     .container-snap {
         display: flex;
         overflow-x: auto;
-        height: 79vh;
+        height: 71vh;
         scroll-snap-type: x mandatory;
         -ms-overflow-style: none;  /* IE and Edge */
         scrollbar-width: none;  /* Firefox */
 
         .box{
-            width: 300px;
+            width: 91vw;
             position: relative;
             margin-left: 10px;
 
             .img{
-              width: 300px;
+              width: 91vw;
+              height: 69vh;
               border-radius: 16px;
               object-fit: cover;
                 scroll-snap-align: center;
@@ -221,14 +256,19 @@ html{
               position: absolute;
               bottom: 40px; 
               left: 25px;
+              text-decoration: none;
+
 
               .title{
-                font-size: 20px;
+                font-size: 25px;
+                color: #000000;
               }
 
               .details{
-                font-size: 11px;
+                font-size: 12px;
                 margin-top: 10px;
+                color: #000000;
+
               }
             }
         }
@@ -245,11 +285,24 @@ html{
   font-weight: 500;
 }
 
+
+
+
+
+
+
+.spacer02{
+  height: 50px;
+  width: 100%;
+}
+
 .text-container01{
   width: 100%;
   height: 300px;
+
   .title{
     margin-left: 10px;
+    font-size: 21px;
   }
 
 
@@ -279,7 +332,7 @@ html{
     .container-snap {
         display: flex;
         overflow-x: auto;
-        height: 300px;
+        height: auto;
         scroll-snap-type: x mandatory;
         -ms-overflow-style: none;  /* IE and Edge */
         scrollbar-width: none;  /* Firefox */
@@ -306,15 +359,148 @@ html{
               
 
               .title{
-                font-size: 20px;
+                font-size: 25px;
               }
 
               .details{
-                font-size: 11px;
+                font-size: 13px;
                 margin-top: 0px;
+                color: #000000;
+
               }
             }
         }
     }
+  } 
 }
+
+.divider{
+  width: 95%;
+  height: 1px;
+  background-color: #cccccc;
+  margin-top: 100px;
+  margin-bottom: 100px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.survey{
+  width: 95%;
+  height: auto;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 130px;
+
+  .title{
+    font-size: 21px;
+  }
+
+  .img-container{
+    width: 100%;
+    height: auto;
+    margin-top: 10px;
+    border-radius: 106px;
+
+    .img{
+      object-fit: cover;
+      width: 100%;
+      height: 100%;
+      border-radius: 16px
+    }
+  }
+
+  .flex{
+    display: flex;
+    gap: 10px;
+    margin-top: 10px;
+
+    a{
+      width: 100%;    
+
+      .button-survey-active{
+        border-radius: 16px;
+        height: 100px;
+        width: 100%;
+        background-color: #000000;
+        display: block;
+        align-content: center;
+        justify-items: center;
+        transition: 0.40s;
+
+
+        .material-symbols-rounded{
+          color: white;
+          font-size: 30px;
+          transition: 0.40s;
+
+        }
+
+        .details{
+          color: white;
+        }
+      }
+
+      .button-survey{
+        border-radius: 16px;
+        height: 100px;
+        width: 100%;
+        background-color: #d9d9d9;
+        display: block;
+        align-content: center;
+        justify-items: center;
+        transition: 0.40s;
+
+        .material-symbols-rounded{
+          color: rgb(0, 0, 0);
+          font-size: 30px;
+          transition: 0.40s;
+        }
+
+        .details{
+          color: rgb(0, 0, 0);
+        }
+      }
+
+
+      .button-survey-active:hover{
+        background-color: #000000;
+        transform: scale(0.95);
+
+
+        .material-symbols-rounded{
+          color: white;
+          transition: 0.40s;
+
+          font-variation-settings:
+          'FILL' 1,
+          'wght' 400,
+          'GRAD' 0,
+          'opsz' 24        }
+
+        .details{
+          color: white;
+        }
+      }
+
+      .button-survey:hover{
+        background-color: #d9d9d9;
+        transform: scale(0.95);
+
+        .material-symbols-rounded{
+          color: rgb(0, 0, 0);
+          transition: 0.40s;
+
+          font-variation-settings:
+          'FILL' 1,
+          'wght' 400,
+          'GRAD' 0,
+          'opsz' 24        
+        }
+
+        .details{
+          color: rgb(0, 0, 0);
+        }
+      }
+    }
+  }
 }
