--- a/styles.css
+++ b/styles.css
@@ -418,13 +418,14 @@ html{
       width: 100%;    
 
       .button-survey-active{
-        border-radius: 16px;
-        height: 100px;
+        border-radius: 100px;
+        height: auto;
         width: 100%;
+        height: 60px;
         background-color: #000000;
-        display: block;
-        align-content: center;
-        justify-items: center;
+        display: flex;
+        gap: 10px;
+        justify-content: center;
         transition: 0.40s;
 
 
@@ -432,32 +433,39 @@ html{
           color: white;
           font-size: 30px;
           transition: 0.40s;
+          align-self: center;
 
         }
 
         .details{
           color: white;
+          align-self: center;
         }
       }
 
       .button-survey{
-        border-radius: 16px;
-        height: 100px;
+        border-radius: 100px;
+        height: auto;
         width: 100%;
+        height: 60px;
         background-color: #d9d9d9;
-        display: block;
-        align-content: center;
-        justify-items: center;
+        display: flex;
+        gap: 10px;
+        justify-content: center;
         transition: 0.40s;
 
         .material-symbols-rounded{
           color: rgb(0, 0, 0);
           font-size: 30px;
           transition: 0.40s;
+          align-self: center;
+
         }
 
         .details{
           color: rgb(0, 0, 0);
+          align-self: center;
+
         }
       }
 
