--- a/styles.css
+++ b/styles.css
@@ -249,28 +249,28 @@ html{
               object-fit: cover;
                 scroll-snap-align: center;
             }
-      
-            .text-container{
-              z-index: 1;
-              width: 250px;
-              position: absolute;
-              bottom: 40px; 
-              left: 25px;
-              text-decoration: none;
+        }
+
+        .text-container{
+          z-index: 1;
+          width: 250px;
+          bottom: 40px; 
+          margin-left: 40px;
+          margin-top: -130px;
+          text-decoration: none;
 
 
-              .title{
-                font-size: 25px;
-                color: #000000;
-              }
+          .title{
+            font-size: 25px;
+            color: #000000;
+          }
 
-              .details{
-                font-size: 12px;
-                margin-top: 10px;
-                color: #000000;
+          .details{
+            font-size: 12px;
+            margin-top: 10px;
+            color: #000000;
 
-              }
-            }
+          }
         }
     }
 }
