--- a/restaurant/pages/page1/styles.css
+++ b/restaurant/pages/page1/styles.css
@@ -111,8 +111,8 @@ html{
     width: 95%;
     height: 1px;
     background-color: #cccccc;
-    margin-top: 100px;
-    margin-bottom: 130px;
+    margin-top: 50px;
+    margin-bottom: 100px;
     margin-left: auto;
     margin-right: auto;
   }
@@ -292,396 +292,419 @@ html{
 }
 
 .content{
-  width: 95%;
+  width: 100%;
   height: auto;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 30px;
+  margin-top: 0px;
 
-  .button{
-    width: 50px;
-    height: 50px;
-    background-color: #d9d9d9;
-    border-radius: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: 0.40s;
-
-    .material-symbols-rounded{
-      font-size: 30px;
-      color: #000000;
+    .button{
+      width: 50px;
+      height: 50px;
+      position: absolute;
+      left: 16px;
+      margin-top: 16px;
+      background-color: #000000b4;
+      border-radius: 100px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       transition: 0.40s;
 
-    }
-  }
-
-  .button:hover{
-    transform: scale(0.95);
-
-    .material-symbols-rounded{
-      transform: scale(1.5);
-    }
-  }
-
-  .text-container{
-    width: 100%;
-    height: auto;
-    margin-top: 30px;
-
-    .title{
-      font-size: 25px;
-    }
-  }
-
-  .rate{
-    display: flex;
-    gap: 10px;
-    margin-top: 10px;
-
-    .img-container{
-      width: 20px;
-      height: 20px;
-    }
-
-    .details{
-      font-weight: 300;
-    }
-  }
-
-  .filters{
-    width: 100%;
-    height: auto;
-    background-color: #49313100;
-    margin-top: 10px;
-    z-index: 0;
-    position: relative;
-    border-bottom: #cccccc00 solid 1px;
-
-    .container-snap{
-      display: flex;
-      overflow-x: auto;
-      gap: 10px;
-      height: auto;
-      width: 100%;
-      border-radius: 13px;
-
-      margin-right: auto;
-      margin-left: auto;
-      scroll-snap-type: x mandatory;
-      -ms-overflow-style: none;  /* IE and Edge */
-      scrollbar-width: none;  /* Firefox */
-
-      .filter{
-        width: auto;
-        height: auto;
-        padding-left: 27px;
-        padding-right: 27px;
-        padding-top: 10px;
-        padding-bottom: 10px;
-        border-radius: 13px;
-        background-color: #fdfdfd;
-        display: flex;
-        font-family: inter;
-        color: rgb(0, 0, 0);
-        font-size: 12px;
+      .material-symbols-rounded{
+        font-size: 30px;
+        color: #ffffff;
         transition: 0.40s;
-        justify-content: center;
+
+      }
+    }
+
+    .button:hover{
+      background-color: #000000;
+      transform: scale(0.95);
+
+      .material-symbols-rounded{
+        transform: scale(1.5);
+      }
+    }
+
+    .text-container{
+      width: 95%;
+      margin-left: auto;
+      margin-right: auto;
+      height: auto;
+      display: flex;
+      margin-top:10px;
+
+
+      .title{
+        font-size: 27px;
+        width: 100%;
+
+      }
+
+      .rate{
+        display: flex;
+        margin-left: auto;
+        margin-right: auto;
+        gap: 10px;
         align-items: center;
-        gap: 5px;
-
-
+  
         .img-container{
           width: 20px;
           height: 20px;
         }
+  
+        .details{
+          font-weight: 300;
+        }
       }
     }
-  }
 
-  .img-container02 img{
-    margin-top: 10px;
-    border-radius: 16px;
-    height: 450px;
-  }
-
-
-
-
-
-
-
-
-  .text-container02{
-    width: 100%;
-    height: auto;
-    margin-top: 100px;
-
-    .title{
-      font-size: 20px;
-    }
-  }
-
-
-
-
-  
-
-
-
-  .filters02{
-    width: 100%;
-    height: auto;
-    background-color: #49313100;
-    margin-top: 10px;
-    position: relative;
-    border-bottom: #cccccc00 solid 1px;
-
-    .container-snap{
-      display: flex;
-      overflow-x: auto;
-      gap: 10px;
+    .filters{
+      width: 95%;
+      margin-left: auto;
+      margin-right: auto;
       height: auto;
+      background-color: #e0191900;
+      margin-top: 20px;
+      z-index: 0;
+      position: relative;
+      border-bottom: #cccccc00 solid 1px;
+
+      .container-snap{
+        display: flex;
+        overflow-x: auto;
+        gap: 10px;
+        height: auto;
+        width: 100%;
+        border-radius: 13px;
+
+        margin-right: auto;
+        margin-left: auto;
+        scroll-snap-type: x mandatory;
+        -ms-overflow-style: none;  /* IE and Edge */
+        scrollbar-width: none;  /* Firefox */
+
+        .filter{
+          width: auto;
+          height: auto;
+          padding-left: 27px;
+          padding-right: 27px;
+          padding-top: 10px;
+          padding-bottom: 10px;
+          border-radius: 13px;
+          background-color: #fdfdfd;
+          display: flex;
+          font-family: inter;
+          color: rgb(0, 0, 0);
+          font-size: 12px;
+          transition: 0.40s;
+          justify-content: center;
+          align-items: center;
+          gap: 5px;
+
+
+          .img-container{
+            width: 20px;
+            height: 20px;
+          }
+        }
+      }
+    }
+
+    .img-container02 img{
+      border-radius: 16px;
+      height: 63.5vh;
       width: 100%;
 
-      margin-right: auto;
-      margin-left: auto;
-      scroll-snap-type: x mandatory;
-      -ms-overflow-style: none;  /* IE and Edge */
-      scrollbar-width: none;  /* Firefox */
+      .img{
+        border-radius: 0px;
+      }
+    }
 
-      .filter{
-        width: 100%;
-        height: 250px;
-        border-radius: 13px;
+
+
+
+    
+
+
+
+    .filters02{
+      width: 100%;
+      height: auto;
+      margin-top: 10px;
+
+      .container-snap{
         display: flex;
-        font-family: inter;
-        color: rgb(0, 0, 0);
-        font-size: 12px;
-        transition: 0.40s;
-        justify-content: center;
-        align-items: center;
-        border-radius: 16px;
-         gap: 5px;
+        overflow-x: auto;
+        gap: 10px;
+        height: auto;
+        width: 100%;
+
+        margin-right: auto;
+        margin-left: auto;
+        scroll-snap-type: x mandatory;
+        -ms-overflow-style: none;  /* IE and Edge */
+        scrollbar-width: none;  /* Firefox */
+
+        .filter{
+          width: 100%;
+          height: 250px;
+          border-radius: 13px;
+          display: flex;
+          font-family: inter;
+          color: rgb(0, 0, 0);
+          font-size: 12px;
+          transition: 0.40s;
+          justify-content: center;
+          align-items: center;
+          border-radius: 16px;
+          gap: 5px;
 
 
-        .img-container img{
-          object-fit: cover;
-          width: 300px;
-          height: 240px;
+          .img-container img{
+            object-fit: cover;
+            width: 300px;
+            height: 240px;
+
+            .img{
+              width: 100%;
+              height: 100%;
+              object-fit: cover;
+              border-radius: 16px;
+            }
+          }
+        }
+      }
+    }
+
+
+
+
+
+
+
+
+
+
+    .text-container01{
+      width: 95%;
+      height: auto;
+      margin-left: auto;
+      margin-right: auto;
+      margin-top: 0px;
+    
+      .title{
+        font-size: 20px;
+        margin-top: 50px;
+      }
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+    
+      .carousel02{
+        max-width: 100%;
+        width: 100%;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 10px;
+        
+    
+    
+        .container-snap {
+            display: flex;
+            overflow-x: auto;
+            height: auto;
+            scroll-snap-type: x mandatory;
+            -ms-overflow-style: none;  /* IE and Edge */
+            scrollbar-width: none;  /* Firefox */
+            overflow-y: hidden;
+            gap: 10px;
+            height: 200px;
+            border-radius: 16px;
+
+
+
+
+
+
+
+
+
+
+
+
+            .open-button {
+              width: 100%;
+              height: 100%;
+              border: none;
+              padding: none;
+              border-radius: 16px;
+              padding: 0;
+
+              .box{
+                width: 100%;
+                position: relative;
+                
+    
+                .img{
+                  width: 100%;
+                  height: 200px;
+                  border-radius: 16px;
+                  object-fit: cover;
+                    scroll-snap-align: left;
+                }
+            }
+            }
+        }
+      } 
+    }
+
+
+    .form-popup{
+      display: none;
+      position: fixed;
+      z-index: 4;
+      width: 100%;
+      margin-top: -30px;
+      height: 100vh;
+      background-color: #00000083;
+      backdrop-filter: blur(7px);
+
+      .button-container{
+        width: 90%;
+        height: auto;
+        margin-left: auto;
+        margin-right: auto;
+        display: flex;
+        gap: 10px;
+        justify-content: space-between;
+        margin-top: 50px;
+        align-items: baseline;
+
+        
+
+        .title{
+          align-self: center;
+          color: white;
+          font-size: 25px;
+        }
+
+        .button{
+          position: relative;
+          border: none;
+          left: 0;
+          width: 40px;
+          height: 40px;
+          background-color: #d9d9d9;
+          border-radius: 100px;
+
+          .material-symbols-rounded{
+            color: #1F1F1F;
+          }
+        }
+      }
+
+      .parent-container{
+        width: 90%;
+        height: 570px;
+        border-radius: 8px;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 10px;
+        display: block;
+        gap: 10px;
+        overflow-x: hidden;
+        overflow-y: scroll;
+
+        .img-container{
+          width: 100%;
+          height: 370px;
+          background-color: #007aff;
+          border-radius: 8px;
 
           .img{
-            width: 100%;
-            height: 100%;
             object-fit: cover;
-            border-radius: 16px;
+            border-radius: 8px;
           }
         }
-      }
-    }
-  }
 
-
-
-
-
-
-
-
-
-
-  .text-container01{
-    width: 100%;
-    height: 300px;
-  
-    .title{
-      font-size: 20px;
-      margin-top: 50px;
-    }
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-    .carousel02{
-      max-width: 100%;
-      width: 100%;
-      margin-left: auto;
-      margin-right: auto;
-      margin-top: 10px;
-      
-  
-  
-      .container-snap {
-          display: flex;
-          overflow-x: auto;
-          height: auto;
-          scroll-snap-type: x mandatory;
-          -ms-overflow-style: none;  /* IE and Edge */
-          scrollbar-width: none;  /* Firefox */
-          overflow-y: hidden;
-          gap: 10px;
-          height: 200px;
-          border-radius: 16px;
-
-
-
-
-
-
-
-
-
-
-
-
-          .open-button {
-            width: 100%;
-            height: 100%;
-            border: none;
-            padding: none;
-            border-radius: 16px;
-            padding: 0;
-
-            .box{
-              width: 100%;
-              position: relative;
-              
-  
-              .img{
-                width: 100%;
-                height: 200px;
-                border-radius: 16px;
-                object-fit: cover;
-                  scroll-snap-align: left;
-              }
-          }
-          }
-      }
-    } 
-  }
-
-
-  .form-popup{
-    display: none;
-    position: fixed;
-    z-index: 4;
-    width: 100%;
-    margin-left: -10px;
-    margin-top: -30px;
-    height: 100vh;
-    background-color: #00000083;
-    backdrop-filter: blur(7px);
-
-    .button-container{
-      width: 90%;
-      height: auto;
-      margin-left: auto;
-      margin-right: auto;
-      display: flex;
-      gap: 10px;
-      justify-content: space-between;
-      margin-top: 30px;
-      
-
-      .title{
-        align-self: center;
-        color: white;
-        font-size: 25px;
-      }
-
-      .button{
-        border: none;
-        width: 40px;
-        height: 40px;
-        background-color: #d9d9d9;
-        border-radius: 100px;
-
-        .material-symbols-rounded{
-          color: #1F1F1F;
-        }
       }
     }
 
-    .parent-container{
-      width: 90%;
-      height: 570px;
-      border-radius: 8px;
+
+
+
+
+    .location{
+      width: 95%;
       margin-left: auto;
       margin-right: auto;
-      margin-top: 10px;
-      display: block;
-      gap: 10px;
-      overflow-x: hidden;
-      overflow-y: scroll;
-
-      .img-container{
+      .text-container02{
         width: 100%;
-        height: 370px;
-        background-color: #007aff;
-        border-radius: 8px;
+        height: auto;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 100px;
 
-        .img{
-          object-fit: cover;
-          border-radius: 8px;
+        .title{
+          font-size: 20px;
         }
       }
 
-    }
-  }
-
-
-
-
-
-
-
-
-
-
-
-
-  .maps{
-    width: 100%;
-    height: 500px;
-    margin-top: 10px;
-    border-radius: 16px;
-  }
-
-  .button-maps{
-    width: 100%;
-    height: 50px;
-    background-color: #000000;
-    border-radius: 100px;
-    margin-top: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 120px;
-    gap: 10px;
-
-    .material-symbols-rounded{
-      color: white;
+      .maps{
+        width: 100%;
+        margin-left: auto;
+        margin-right: auto;
+        height: 500px;
+        margin-top: 10px;
+        border-radius: 16px;
+      }
+  
+      .button-maps{
+        width: 100%;
+        height: 50px;
+        background-color: #000000;
+        border-radius: 100px;
+        margin-top: 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 120px;
+        gap: 10px;
+  
+        .material-symbols-rounded{
+          color: white;
+        }
+  
+        .title{
+          color: white;
+        }
+      }
+  
+      .button-maps:hover{
+        background-color: #007aff;
+      }
     }
 
-    .title{
-      color: white;
-    }
-  }
 
-  .button-maps:hover{
-    background-color: #007aff;
-  }
-}
 
+
+
+
+
+
+  }
