--- a/restaurant/styles.css
+++ b/restaurant/styles.css
@@ -312,8 +312,14 @@ html{
   .title-tag{
     font-family: "Inter", serif;
     font-weight: 700;
-    font-size: 20px;
+    font-size: 12px;
     margin-bottom: 10px;
+    background-color: #000000;
+    width: 65px;
+    text-align: center;
+    padding: 10px;
+    border-radius: 16px;
+    color: white;
   }
 
   .profile{
@@ -355,6 +361,7 @@ html{
         height: 30px;
         justify-content: right;
         gap: 10px;
+        margin-top: 7px;
 
         .img-container{
           width: 20px;
